@@ -15,6 +15,10 @@ See the License for the specific language governing permissions and
 limitations under the License.
 ////
 
+== 0.x.x
+
+* The changelog release models passed to the index template file (`.index.adoc.ftl`) is enriched with `changelogEntryCount` fields (for https://github.com/apache/logging-log4j-tools/issues/37[#37] by Volkan Yazıcı)
+
 == 0.2.0 (2023-01-31)
 
 * Fixed Windows compatibility (for https://github.com/apache/logging-log4j-tools/issues/19[#19] by Piotr P. Karwasz, Volkan Yazıcı)
